<resources>
    <string name="app_name">DatePlace</string>
    <string name="button_connexion_text">Connect</string>
    <string name="button_inscription_text">Subscribe</string>
    <string name="connexion_identifier_HintText">Email</string>
    <string name="connexion_password_HintText">Password</string>
    <string name="button_goback_text">Back</string>
    <string name="button_connect_text">Sign In</string>
    <string name="button_inscrip_text">Subscribe</string>
    <string name="title_pseudo_text">FirstName</string>
    <string name="title_nom_text">LastName</string>
    <string name="title_adressemail_text">Email</string>
    <string name="title_password_text">Password</string>
    <string name="title_date_of_birth_text">Birthday</string>
    <string name="title_goal_text">What i mean</string>
    <string name="calendar">Calendar</string>
    <string-array name="goal">
        <item>Date Place</item>
        <item>Entertainement with friends</item>
        <item>Entertainement with family</item>
    </string-array>
    <string name="twitterUsername"></string>
    <string name="user_place">Paris, France</string>
    <string name="user_email">************@******</string>
    <string name="user_password">***********</string>
    <string name="log_out">Disconnect</string>
    <string name="search">Search</string>
    <string name="user_goal_title">Goal</string>
    <string name="access_token">pk.eyJ1IjoiZGVzbGF5IiwiYSI6ImNqcTQxdXM4dTFrYW00OG11ZHJieHR1YjQifQ.x0wMIY5il7ubistZeYVcEw</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="setting">Parameters</string>
    <string name="rotation_screen">Block rotation</string>
    <string name="notif">Notifications</string>
    <string name="help">Help</string>
    <string name="language">Language</string>
    <string name="update">Current Version</string>
    <string name="social_media">Social networks</string>
    <string name="contact">Contact</string>
    <string name="delete_user">Delete account</string>
    <string name="authorization">Authorization</string>
    <string name="legal_notice">Legal Mention</string>
    <string name="user_name"></string>
    <string name="user_firstname"></string>
    <string name="user_birthday"></string>
    <string name="user_goal"></string>
    <string name="disconnection_message">You really want to disconnect ?</string>
    <string name="positive_response">Yes</string>
    <string name="negative_response">No</string>
    <string name="new_firstname_message">New FirstName</string>
    <string name="new_lastname_message">New FirstName</string>
    <string name="new_firstname_title_message">Modify firstname</string>
    <string name="new_lastname_title_message">Modify lastname</string>
    <string name="cancel_message">Cancel</string>
    <string name="modify_message">Modify</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="hold_password_message">Hold password</string>
    <string name="new_password_message">New password</string>
    <string name="modification_password_message">Modification of password</string>
    <string name="empty_fields_message">Fields empty</string>
    <string name="understand_message">I understant</string>
    <string name="new_email_message">New email</string>
    <string name="modification_email_message">Modification email</string>
    <string name="modification_goal">Modification of goal</string>
    <string name="current_goal">You already have this goal</string>
    <string name="modification_failed_message">Modification failed</string>
    <string name="retry_message">Retry</string>
    <string name="mail_or_password_missing">Password/Mail missing</string>
    <string name="no_connection_message">You don\'t have connection</string>
    <string name="not_an_mail">This is not an email</string>
    <string name="connection_failed">Connection failed</string>
    <string name="inscription_failed">Inscription failed</string>

</resources>
